kube/home/media/jellyfin/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: media.cianfr.one
    external-dns.alpha.kubernetes.io/target: gw.it.cianfr.one
spec:
  parentRefs:
    - name: external-gw
      namespace: networking
      sectionName: https
  hostnames:
    - media.cianfr.one
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: jellyfin
          port: 8096
